k8s/ingress/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main
  labels:
    app: main
spec:
  replicas: 2
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      name: main
      labels:
        app: main
    spec:
      containers:
        - name: main
          #          image: tomcat:8.5.38
          image: adv4000/k8sphp:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
      restartPolicy: Always
