k8s/ingress/deploy1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web1
  labels:
    app: web1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web1
  template:
    metadata:
      name: web1
      labels:
        app: web1
    spec:
      containers:
        - name: web1
          #          image: tomcat:8.5.38
          image: adv4000/k8sphp:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
      restartPolicy: Always
