k8s/ingress/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: web1
spec:
  selector:
    app: web1
#  clusterIP: 10.96.1.1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
#  type: ClusterIP
  type: LoadBalancer
#  type: NodePort

#  9375  minikube start -n 3 -p test --memory 2096 --cpus 2 --subnet 192.168.55.0
#  kubectl apply -f https://projectcontour.io/quickstart/contour.yaml
