k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
spec:
  ingressClassName: contour
  rules:
    - host: www.my
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: main
                port:
                  number: 80

    - host: web1.my
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: web1
                port:
                  number: 80

    - host: web2.my
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: web2
                port:
                  number: 80

#    - host: webx.my
#      http:
#        paths:
#          - path: /
#            pathType: ImplementationSpecific
#            backend:
#              service:
#                name: webx
#                port:
#                  number: 80

    - host: cat.my
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: tomcat
                port:
                  number: 8080
